examples/illformed/using_var_before_declared.zn
func main() {
    println(a);  // Error: 'a' used before declaration
    let a: i32 = 3;
}
